# cz4031-sql-query-optimizer

./: .gitignore  CZ4031 Project 2 Report.docx  README.md  app.py  attribute_histograms.xlsx  clean.py  cost_estimate.pptx  package.json
api/: .gitignore  README.md  app.py  archive.py  config.py  cost_calculation.py  custom_errors.py  database_query_helper.py  generate_predicate_varies_values.py  generator.py  postorder_qep.py  pyproject.toml  query_visualizer.py  query_visualizer_explainer.py  requirements.txt  sqlparser.py
api/constant/: constants.py
api/pipeline/: sqlparser.py
db/: dss.ri
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.js
frontend/src/components/: App.js  App.jsx  FormInput.js  FormInput.jsx  FormOutput.js  QueryVisualizer.js
frontend/src/components/App/: App.js  App.module.css
frontend/src/components/FormInput/: FormInput.js  FormInput.module.css
frontend/src/components/FormOutput/: FormOutput.js  FormOutput.module.css
frontend/src/components/PlanComparison/: PlanComparison.js  PlanComparison.module.css
frontend/src/components/QueryVisualizer/: QueryVisualizer.js  QueryVisualizer.module.css
frontend/src/css/: reset.css  theme.css
queries/: 01.sql  03.sql  04.sql  05.sql  08.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  2.sql  6.sql  7.sql  9.sql  test.sql
queries_text/: 3.txt  4.txt  queries.txt
reference/: attribute_histograms.xlsx
sample_queries/: 1.sql  10.sql  2.sql  5.sql  5.txt  6.txt  7.txt  8.sql  9.sql
